--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <title>the-little-cipher</title>
+  <title>The Little Cipher</title>
 <link href="./antd.css" rel="stylesheet"><link href="./main.css" rel="stylesheet"></head>
 
 <body>
